--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force"
-  },
-  "dependencies": {
-    "pinia": "^2.1.7",
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
-  },
-  "devDependencies": {
-    "@tsconfig/node20": "^20.1.2",
-    "@types/node": "^20.11.10",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "10.4.17",
-    "npm-run-all2": "^6.1.1",
-    "postcss": "8.4.35",
-    "sass": "1.71.1",
-    "tailwindcss": "3.4.1",
-    "typescript": "~5.3.0",
-    "vite": "^5.0.11",
-    "vue-tsc": "^1.8.27"
-  }
+	"name": "frontend",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@types/node": "^20.11.24",
+		"@types/react": "18.2.56",
+		"@types/react-dom": "18.2.19",
+		"@typescript-eslint/eslint-plugin": "7.0.2",
+		"@typescript-eslint/parser": "7.0.2",
+		"@vitejs/plugin-react": "4.2.1",
+		"autoprefixer": "10.4.18",
+		"eslint": "8.56.0",
+		"eslint-plugin-react-hooks": "4.6.0",
+		"eslint-plugin-react-refresh": "0.4.5",
+		"postcss": "8.4.35",
+		"sass": "1.71.1",
+		"tailwindcss": "3.4.1",
+		"typescript": "5.2.2",
+		"vite": "5.1.4"
+	}
 }
