--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,11 @@
 	"author": "Pedro Purihuaman <pedropuriihuaman@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
+		"bcryptjs": "2.4.3",
 		"cors": "2.8.5",
 		"dotenv": "16.4.5",
 		"express": "4.18.2",
+		"jsonwebtoken": "9.0.2",
 		"pg": "8.11.3",
 		"zod": "3.22.4"
 	},
